2005-10-13  Kouhei Sutou  <kou@cozmixng.org>

	* sample/gtk-demo/cairo-gradient.rb: Use
	Cairo::GradientPattern#add_color_stop_rgb too.

	* sample/misc/cairo-pong.rb: Added cairo sample from gtkcairo
	sample.

2005-10-12  Kouhei Sutou  <kou@cozmixng.org>

	* sample/gtk-demo/: Added cairo samples.

	* sample/misc/rgtk+cairo.rb: Use set_source_rgba instead of
	set_source_rgb. Because set_source_rgb is deprecated.

	* sample/gtk-demo/main.rb:
	- Ctrl+q quit the program.
	- Added nil check. 

2005-10-10  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgdkcairo.c:
	- Added 'gdk_' prefix.
	- Added status check.

2005-10-07  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtktextbuffer.c: Gtk::TextBuffer#selection_bounds returns 
	 start/end iters even if the selection has zero length. Bug #[1314405].
	* extconf.rb: Fix to compilation error on Win32 and Ruby/Cairo.

2005-10-04  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Support Ruby/Cairo on Win32.
        Use CAIRO_PATH variable.

2005-09-29  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkconst.c: Added Gtk::BUILD_VERSION.

2005-09-26  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgdkcairo.c: support Gdk-Cairo interface.
	checked by Guillaume Cottenceau <gcottenc@gmail.com>.

	* src/rbgdkdraw.c: ditto.

	* src/lib/gtk2.rb: ditto.

2005-09-24  Guillaume Cottenceau

	* rbgdkscreen.c: 2.8: add Gdk::Screen#rgba_colormap and
	Gdk::Screen#rgba_visual

	* rbgdkwindow.c: 2.8: add Gdk::Window#move_region and
	Gdk::Window#urgency_hint=. X11 only,
	Gdk::Window#move_to_current_desktop.

	* rbgdkdisplay.c: 2.8: for X11 only, add Gdk::Display#user_time
	and Gdk::Display#set_cursor_theme.

2005-09-20  Guillaume Cottenceau

	* src/rbgdkevent.c: 2.8: add Gdk::EventGrabBroken

	* src/rbgdkcursor.c: 2.8: add Gdk::Cursor.new(display, name)
	  (wraps gdk_cursor_new_from_name), add Gdk::Cursor#image

	* src/rbgdkdisplay.c: 2.8: add Gdk::Display#warp_pointer

2005-09-19  Masao Mutoh  <mutoh@highway.ne.jp>
